# geodesy-moos

./: CMakeLists.txt
cmake/: ProjectConfig.cmake.in
libMOOSGeodesy/: CMakeLists.txt
